# email-classifier

./: .env-sample  Containerfile  README.md  pyproject.toml
dataset/: custom-dataset.csv  dataset.csv  sample-phising.csv
notebooks/: benchmark.ipynb  email-classifier.ipynb
src/: main.py
src/dto/: classifier.py
src/enums/: classifier_types.py
src/routers/: classifier.py
src/services/: classifier.py
