[project]
name = "email-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.1.1",
    "evaluate>=0.4.6",
    "fastapi>=0.117.1",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "tiktoken>=0.11.0",
    "transformers>=4.56.2",
    "uvicorn>=0.36.0",
]
